# coref

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
coref/: __init__.py
coref/language/macro/: __init__.py
coref/language/primal/: __init__.py
coref/utils/: __init__.py
